       lost souls easier to beat back
     * bugfix for blocker in 'In the Tunnels of the Trolls'
 * graphics:
   * polished ankh prop picture from Liberty, and moved to core replacing
     old ankh-necklace.png used by Eastern Invasion
 * language and i18n:
   * updated translations: Czech, Danish, Finnish, French, Galician, Greek,
     Hungarian, Italian, Polish, Swedish, Valencian
 * multiplayer:
   * revised maps: Silverhead Crossing, Weldyn Channel, Blue Water Province
   * the server sends a periodical 'ping' to all players to detect ghosts
 * sound
   * "Legends of the North" (legends_of_the_north.ogg) moved from NR to mainline
 * units:
   * code changes:
     * created female variation for L3 Necromancer (needs graphics)
 * user interface:
   * changed the mute hotkey from ctrl-m to ctrl-alt-m
   * renamed "Advanced Mode" button on graphics preferences to "Change Resolution"
   * renamed "Advanced Mode" button on sound preferences to "Advanced Options", and
     "Normal Mode" to "Standard Options"
 * WML engine:
   * new key "contains=" in [variable] conditions to check the presence of a 
     substring in a variable value
   * maps now have a user definable border
   * Changed the mute hotkey from ctrl-m to ctrl-alt-m.
   * On victory, all old saves for the scenario except the start one
     are now deleted (rather than just autosaves as formerly). This
     is done before replay saving, if that is enabled. The preference
     name has changed from delete_autosaves to delete_saves.
   * Animation engine allow multiple type of frames (a la "missile frames")
     for all types of anims, you can have multiple such anims using different
     frame names
 * miscellaneous and bug fixes:

Version 1.3.9:
 * campaigns:
  * Descent into Darkness
    * in 'Peaceful Valley', goblins may no longer spawn when you recapture a
      village you had lost
  * Heir to the Throne
    * new graphics for the battle princess