@@ -19,6 +19,9 @@ Version 1.3.9+svn:
  * language and i18n:
    * updated translations: Czech, Danish, Finnish, French, Galician, Greek,
      Hungarian, Italian, Polish, Swedish, Valencian
+ * map editor:
+   * fixed a bug when two dimensions of a map were modified, the editor 
+     could crash
  * multiplayer:
    * revised maps: Silverhead Crossing, Weldyn Channel, Blue Water Province
    * the server sends a periodical 'ping' to all players to detect ghosts
